lintian (2.2.15) UNRELEASED; urgency=low

  * checks/fields:
    + [RA] Exclude base-files from the needlesly-depends-on-awk tag
      and from the warning about depending on a virtual package without
      a real package for the awk virtual package.
  * checks/files:
    + [RA] Suppress non-standard-dir-perm for /tmp, /var/tmp, /var/local,
      /var/lock, and /usr/src if they have their normal owner and
      permissions.  This suppresses some Lintian tags for base-files.
    + [RA] Allow base-files to ship /var/backups and /var/local.
  * checks/manpages:
    + [ADB] Add HTTPS to the list of recognised protocols for URLs in manpages
      which should not cause manpage-has-errors-from-man to be emitted.
      (Closes: #543641)
  * checks/rules:
    + [RA] Anchor the dh_quilt regex to not trigger on commented-out
      calls.  Patch from Cesare Tirabassi.  (Closes: #543259)

  * reporting/{html_reports,templates/clean.tmpl}:
    + [JP] Don't link to full report if the maintainer only has clean
      packages. (Closes: #545781)

 -- Adam D. Barratt <adam@adam-barratt.org.uk>  Wed, 26 Aug 2009 21:13:12 +0100

lintian (2.2.14) unstable; urgency=low

  The "Policy 3.8.3" release.

  * Summary of tag changes:
    + Added:
      - debhelper-overrides-need-versioned-build-depends
      - maintainer-script-modifies-ld-so-conf
      - missing-dependency-on-install-info
      - multiple-distributions-in-changes-file
      - patch-system-but-no-source-readme
      - package-modifies-ld.so-search-path
      - possible-documentation-but-no-doc-base-registration
    + Removed:
      - file-in-usr-something-x11-without-pre-depends
    + Renamed:
      - build-depends-on-x-metapackage => build-depends-on-metapackage
      - depends-on-x-metapackage => depends-on-metapackage

  * checks/changelog-file.desc:
    + [RA] Document the "Old Changelog" way of marking historic changelog
      entries that shouldn't be syntax-checked in the long description for