@@ -1,0 +1,27 @@
+# Known essential packages.  These packages can always be assumed to be
+# installed and should not have non-versioned dependencies.
+
+base-files
+base-passwd
+bash
+bsdutils
+coreutils
+debianutils
+diff
+dpkg
+e2fsprogs
+findutils
+grep
+gzip
+hostname
+login
+mktemp
+mount
+ncurses-base
+ncurses-bin
+perl-base
+sed
+sysvinit
+sysvinit-utils
+tar
+util-linux
