@@ -1,9 +1,14 @@
 lintian (2.2.15) UNRELEASED; urgency=low
 
+  * checks/common_data.pm:
+    + [RA] Moved the essential package list to data/fields.
+  * checks/copyright-file:
+    + [RA] Use Lintian::Data to read the essential package list.
   * checks/fields:
     + [RA] Exclude base-files from the needlesly-depends-on-awk tag
       and from the warning about depending on a virtual package without
       a real package for the awk virtual package.
+    + [RA] Use Lintian::Data to read the essential package list.
   * checks/files:
     + [RA] Suppress non-standard-dir-perm for /tmp, /var/tmp, /var/local,
       /var/lock, and /usr/src if they have their normal owner and
@@ -16,6 +21,9 @@ lintian (2.2.15) UNRELEASED; urgency=low
   * checks/rules:
     + [RA] Anchor the dh_quilt regex to not trigger on commented-out
       calls.  Patch from Cesare Tirabassi.  (Closes: #543259)
+
+  * data/fields/essential:
+    + [RA] New list of essential packages.
 
   * reporting/{html_reports,templates/clean.tmpl}:
     + [JP] Don't link to full report if the maintainer only has clean
